# addapi.php
@@ -1,0 +1,121 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>index</title>
+</head>
+<style>
+    body{
+        text-align: center;
+    }
+    .btn {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
+    }
+
+    button {
+        margin: 20px;
+        width: 120px;
+        height: 35px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: bold;
+        color: black;
+        background: white;
+        border: 1px solid black;
+        box-shadow: 2px 2px 0 black,
+            -2px -2px 0 black,
+            -2px 2px 0 black,
+            2px -2px 0 black;
+        transition: 500ms ease-in-out;
+    }
+
+    button:hover {
+        box-shadow: 10px 5px 0 black, -10px -5px 0 black;
+    }
+
+    button:focus {
+        outline: none;
+    }
+
+    .wrapper {
+        text-align: center;
+    }
+
+    input {
+        height: 20px;
+    }
+
+    label {
+
+        padding-right: 30px;
+        font-size: 18px;
+    }
+
+    .text {
+        margin: 15px;
+    }
+    .wrapper{
+        border: 1;
+        background-color: rgb(223, 242, 255);
+        text-align: center;
+        margin-top: 20px;
+        margin-left: 300px;
+        margin-right: 300px;
+        padding: 0px;
+        padding-bottom:20px ;
+        
+    }
+    .submit{
+        margin-left: 15px;
+        background-color: gray;
+        color: white;
+        width: 10%;
+        height: 30px;
+        border-radius: 8px;
+    }
+</style>
+<body>
+    
+    <form action="register.php" method="post">
+        <button style="text-align: center;"><a href="login.html" style="text-decoration: none;color: black;">ออกระบบ</a></button>
+        <div class="wrapper">
+            <h2>เพิ่มข้อมูล API</h2>
+
+            <div class="text">
+                <label for="">Username</label>
+                <input type="text" name="Username" placeholder="Username" ><br>    
+            </div>
+    
+            <div class="text">
+                <label for="">Password</label>
+                <input type="text" name="Password" placeholder="Password"><br>
+            </div>
+    
+            <div class="text">
+                <label for="">Firstname</label>
+                <input type="text" name="Firstname" placeholder="Firstname"><br>
+            </div>
+    
+            <div class="text">
+                <label for="">Lastname</label>
+                <input type="text" name="Lastname" placeholder="Lastname"><br>    
+            </div>
+        
+            <input class="submit" type="submit" value="บันทึก">
+
+
+        </div>
+    </form>
+
+
+</body>
+</html>
